# tessera

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  pyproject.toml
.specify/: feature.json
apps/api/: pyproject.toml
apps/api/tessera_api/: config.py  main.py
apps/api/tessera_api/adapters/: __init__.py  audit.py  celery.py  database.py  email.py  embeddings.py  lgpd.py  llm.py  models.py  repo.py  telemetry.py
apps/api/tessera_api/ai_assist/: prompts.py
apps/api/tessera_api/auth/: bearer.py  jwt_auth.py  oidc.py  password_strength.py  rate_limit.py
apps/api/tessera_api/eval/: judge.py
apps/api/tessera_api/rag/: assistant.py  citations.py  retrieval.py
apps/api/tessera_api/routers/: admin.py  agent_credentials.py  assistant.py  auth.py  companies.py  connectors.py  document_assist.py  documents.py  invitations.py  members.py  metrics.py  onboarding.py  proposals.py  search.py  spaces.py
apps/api/tests/: conftest.py  test_assistant_history.py  test_auth.py  test_company_scoped_admin.py  test_migration_0010_backfill.py  test_migration_0013_backfill_space_memberships.py  test_space_hierarchy.py  test_space_hierarchy_isolation.py  test_space_visibility.py  test_tenant_auth_isolation.py  test_tenant_isolation.py
apps/api/tests/auth/: test_auth_login.py  test_auth_logout.py  test_auth_refresh.py  test_auth_register.py  test_jwt_helpers.py  test_jwt_protection.py  test_select_tenant.py
apps/api/tests/contract/: test_assistant.py  test_change_password.py  test_document_assist.py  test_documents.py  test_forgot_password.py  test_members.py  test_reset_password.py  test_search.py
apps/api/tests/integration/: test_access_boundary.py  test_accessible_docs.py  test_admin.py  test_admin_space_visibility.py  test_answer_permissions.py  test_companies.py  test_company_domain_association.py  test_company_profile.py  test_document_assist_tenant_isolation.py  test_document_delete_cascade.py  test_document_draft_repository.py  test_document_permissions.py  test_domain_match_join.py  test_forgot_password.py  test_invitations.py  test_join_path_parity.py  test_join_request_admin.py  test_member_space_access.py  test_members.py  test_migration_0002.py  test_migration_0016_backfill_company_domains.py  test_onboarding.py  test_onboarding_gate.py  test_password_change.py  test_platform_role.py  test_proposal_approval.py  test_reset_password.py  test_space_delete_cascade.py
apps/api/tests/perf/: test_performance.py
apps/api/tests/security/: test_adversarial_permissions.py
apps/api/tests/unit/: test_ai_assist_prompts.py  test_chunk_repository.py  test_citations.py  test_company_add_user_router.py  test_company_members_router.py  test_company_profile_router.py  test_company_repo.py  test_company_repository_search.py  test_company_router.py  test_document_assist_router.py  test_documents_draft_router.py  test_documents_router.py  test_invitation_repo.py  test_join_grants_invitation_role.py  test_member_space_access_router.py  test_members_router.py  test_ollama_embedding.py  test_onboarding_repo.py  test_password_strength.py  test_reindex_router.py  test_search_router.py  test_spaces_router.py
apps/mcp-server/: pyproject.toml
apps/mcp-server/tessera_mcp/: server.py
apps/mcp-server/tests/: test_mcp_permissions.py  test_parity.py
apps/workers/: pyproject.toml
apps/workers/tessera_workers/: celery_app.py
(+729 files in other folders)
