[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tessera-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "tessera-core",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "psycopg[binary]>=3.1",
    "pgvector>=0.3",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "authlib>=1.3",
    "httpx>=0.27",
    "anthropic>=0.34",
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "structlog>=24.0",
    "itsdangerous>=2.2",
    "bcrypt>=4.0",
    "fastapi-mail>=1.4",
    "celery>=5.3",
    "redis>=5.0",
]

[tool.hatch.build.targets.wheel]
packages = ["tessera_api"]

[tool.uv.sources]
tessera-core = { path = "../../packages/core", editable = true }

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=tessera_api --cov-report=term-missing --cov-fail-under=85"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["tessera_api", "tessera_core"]

[tool.black]
line-length = 100
target-version = ["py312"]

[dependency-groups]
dev = [
    "anyio>=4.13.0",
    "black>=26.5.1",
    "httpx>=0.28.1",
    "pytest>=9.1.0",
    "pytest-anyio>=0.0.0",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.18",
]
