[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tessera-mcp"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "tessera-core",
    "mcp>=1.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "structlog>=24.0",
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
]

[tool.hatch.build.targets.wheel]
packages = ["tessera_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=tessera_mcp --cov-report=term-missing --cov-fail-under=85"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["tessera_mcp", "tessera_core"]

[tool.black]
line-length = 100
target-version = ["py312"]
