[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tessera-workers"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "tessera-core",
    "celery[redis]>=5.4",
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "pgvector>=0.3",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "anthropic>=0.34",
    "httpx>=0.27",
    "gitpython>=3.1",
    "langdetect>=1.0",
    "structlog>=24.0",
    "opentelemetry-api>=1.27",
    "opentelemetry-sdk>=1.27",
]

[tool.hatch.build.targets.wheel]
packages = ["tessera_workers"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=tessera_workers --cov-report=term-missing --cov-fail-under=85"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["tessera_workers", "tessera_core"]

[tool.black]
line-length = 100
target-version = ["py312"]
